Adjust integration test configuration to be excuted in profile